@@ -1,6 +1,7 @@
 version <unreleased>
 
 Extractors
++ [pornhub] Extract categories and tags (#10499)
 + [foxnews] Support Fox News articles (#10598)
 * [iwara] Fix extraction after relaunch (#10462, #3215)
 * [newgrounds] Fix uploader extraction (#10584)
